[package]
name = "bls_eth_rust"
version = "0.0.2"
authors = ["MITSUNARI Shigeo <herumi@nifty.com>"]
description = "BLS signature library for Ethereum 2.0"
license = "BSD-3-Clause OR MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/herumi/bls-eth-rust"

[[bench]]
name = "bls381_benches"
harness = false

[dependencies]
criterion = "0.3.0"
hex = "0.4.0"
